creusot/tests/should_fail/bug/borrowed_ghost.stderr
error[creusot]: Use of borrowed variable x
 --> borrowed_ghost.rs:7:10
  |
7 |     *r = gh! { !x.inner() }; // r = (gh (not (inner x)), x)
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `gh` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

